Add author to README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Written by Radford Neal.
+
 Implements, with slight modifications and extensions, the algorithm described
 in Figures 3 and 5 of the following paper:
 
