--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Written by Radford Neal.
+Written by Radford M. Neal.
 
 Implements, with slight modifications and extensions, the algorithm described
 in Figures 3 and 5 of the following paper:
